5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4345/executions/1692_1099.log
== SUBMITION (2019-05-01 20:19:21) 
-- CODE:
qtd_de_jogos=int(input("digite a quatidade de jogos"))
valor_unit=float(input("digite o valor unitario"))
valor_frete=float(input("digite o valor da frete"))
total=(qtd_de_jogos*valor_unit)+valor_frete
print(total)
-- EXECUTION TIME:
0.14952
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
12.0
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:

-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
9.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:22:51) 
-- CODE:
from math import
# Leitura dos lados do triangulo a, b, and c
a=float(input("Lado 1: "))
b=float(input("Lado 2: "))
c=float(input("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)

-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:23:14) 
-- CODE:
from math import *
# Leitura dos lados do triangulo a, b, and c
a=float(input("Lado 1: "))
b=float(input("Lado 2: "))
c=float(input("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:30:33) 
-- CODE:
from math import *
# Leitura dos lados do triangulo a, b, and c
a=float(input("Lado 1: "))
b=float(input("Lado 2: "))
c=float(input("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
if (a>0) and (b>0) and (c>0):
	# Testa se medidas correspondem aas de um triangulo
	if ((a < b+c) and (b< c+a) and (c<a+b)):
		if ((a==b or b==c))
		print("Tipo de triangulo:", "equilatero")
		elif (a==b or b==c or c==a)
			print("Tipo de triangulo:", "isosceles")
			else:
					print("Tipo de triangulo:", "escaleno")
					else:
							print("Tipo de triangulo:", "invalido")
							else:
								print("Tipo de triangulo:", "invalido")
								
-- EXECUTION TIME:
0.207939
-- ERROR:
  File "/home/codebench/codes/1692/1099/main.py", line 11
    if ((a==b or b==c))
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:30:40) 
-- CODE:
from math import *
# Leitura dos lados do triangulo a, b, and c
a=float(input("Lado 1: "))
b=float(input("Lado 2: "))
c=float(input("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
if (a>0) and (b>0) and (c>0):
	# Testa se medidas correspondem aas de um triangulo
	if ((a < b+c) and (b< c+a) and (c<a+b)):
		if ((a==b or b==c))
		print("Tipo de triangulo:", "equilatero")
		elif (a==b or b==c or c==a)
			print("Tipo de triangulo:", "isosceles")
			else:
					print("Tipo de triangulo:", "escaleno")
					else:
							print("Tipo de triangulo:", "invalido")
							else:
								print("Tipo de triangulo:", "invalido")
								
-- EXECUTION TIME:
0.292984
-- ERROR:
  File "/home/codebench/codes/1692/1099/main.py", line 11
    if ((a==b or b==c))
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:30:56) 
-- CODE:
from math import *
# Leitura dos lados do triangulo a, b, and c
a=float(input("Lado 1: "))
b=float(input("Lado 2: "))
c=float(input("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
if (a>0) and (b>0) and (c>0):
	# Testa se medidas correspondem aas de um triangulo
	if ((a < b+c) and (b< c+a) and (c<a+b)):
		if ((a==b or b==c))
		print("Tipo de triangulo:", "equilatero")
		elif (a==b or b==c or c==a)
			print("Tipo de triangulo:", "isosceles")
			else:
					print("Tipo de triangulo:", "escaleno")
					else:
							print("Tipo de triangulo:", "invalido")
							else:
								print("Tipo de triangulo:", "invalido")
								
-- ERROR:
File "XXXX", line 11
    if ((a==b or b==c))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:31:08) 
-- CODE:
from math import *
# Leitura dos lados do triangulo a, b, and c
a=float(input("Lado 1: "))
b=float(input("Lado 2: "))
c=float(input("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
if (a>0) and (b>0) and (c>0):
	# Testa se medidas correspondem aas de um triangulo
	if ((a < b+c) and (b< c+a) and (c<a+b)):
		if ((a==b or b==c))
		print("Tipo de triangulo:", "equilatero")
		elif (a==b or b==c or c==a)
			print("Tipo de triangulo:", "isosceles")
			else:
					print("Tipo de triangulo:", "escaleno")
					else:
							print("Tipo de triangulo:", "invalido")
							else:
								print("Tipo de triangulo:", "invalido")
								
-- ERROR:
File "XXXX", line 11
    if ((a==b or b==c))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:32:20) 
-- CODE:
from math import *
# Leitura dos lados do triangulo a, b, and c
a=float(input("Lado 1: "))
b=float(input("Lado 2: "))
c=float(input("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
if (a>0) and (b>0) and (c>0):
	# Testa se medidas correspondem aas de um triangulo
	if ((a < b+c) and (b< c+a) and (c<a+b)):
		if ((a==b or b==c))
		print("Tipo de triangulo:", "equilatero")
		elif (a==b or b==c or c==a)
			print("Tipo de triangulo:", "isosceles")
			else:
					print("Tipo de triangulo:", "escaleno")
					else:
							print("Tipo de triangulo:", "invalido")
							else:
								print("Tipo de triangulo:", "invalido")
								
-- EXECUTION TIME:
0.147913
-- ERROR:
  File "/home/codebench/codes/1692/1099/main.py", line 11
    if ((a==b or b==c))
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:32:46) 
-- CODE:
from math import*
# Leitura dos lados do triangulo a, b, and c
a=float(input("Lado 1: "))
b=float(input("Lado 2: "))
c=float(input("Lado 3: "))

print("Entradas:", a, ",", b, ",", c)
if (a>0) and (b>0) and (c>0):
	# Testa se medidas correspondem aas de um triangulo
	if ((a < b+c) and (b< c+a) and (c<a+b)):
		if ((a==b or b==c))
		print("Tipo de triangulo:", "equilatero")
		elif (a==b or b==c or c==a)
			print("Tipo de triangulo:", "isosceles")
			else:
					print("Tipo de triangulo:", "escaleno")
					else:
							print("Tipo de triangulo:", "invalido")
							else:
								print("Tipo de triangulo:", "invalido")
								
-- EXECUTION TIME:
0.202559
-- ERROR:
  File "/home/codebench/codes/1692/1099/main.py", line 11
    if ((a==b or b==c))
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
